# octodns-gitops

./: .gitignore  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
src/octodns_gitops/: __init__.py
src/octodns_gitops/bootstrap/: __init__.py  makefile.py
src/octodns_gitops/cli/: __init__.py  drift.py  report.py  sync.py  validate.py
src/octodns_gitops/logging/: __init__.py  filters.py
src/octodns_gitops/processors/: __init__.py  acme_filter.py  external_dns_filter.py
src/octodns_gitops/utils/: __init__.py  config.py
templates/: mise.toml
tests/: __init__.py  conftest.py
tests/bootstrap/: test_makefile.py
tests/cli/: test_drift.py  test_report.py  test_sync.py  test_validate.py
tests/fixtures/octodns_output/: multi_zone.txt  no_changes.txt  with_creates.txt  with_deletes.txt  with_updates.txt
tests/logging/: test_filters.py
tests/processors/: test_acme_filter.py  test_external_dns_filter.py
tests/utils/: test_config.py
